Radartips patched correções UX/UI

--- a/i18n/strings.json
+++ b/i18n/strings.json
@@ -33,7 +33,33 @@
     "free_label": "FREE",
     "result_pending": "PENDING",
     "result_green": "GREEN",
-    "result_red": "RED"
+    "result_red": "RED",
+    "match_radar": "Match Radar",
+    "match_radar_tip": "Open match details",
+    "risk_tooltip": "Risk level of the pick (volatility / chance of loss).",
+    "suggestion_label": "Radar pick",
+    "suggestion_tooltip": "Free pick (no EV/probability here).",
+    "kickoff_tooltip": "Kickoff time (your local timezone).",
+    "competition_radar_tip": "View matches for this competition.",
+    "country_radar_tip": "View matches for this country.",
+    "form_tooltip": "Last 5 matches (hover each square for details).",
+    "form_tooltip_square": "Match result",
+    "goals_tooltip": "Goals for/goals against (last 5 matches).",
+    "goals_title": "Goals (last 5)",
+    "home_label": "HOME",
+    "away_label": "AWAY",
+    "home_short": "H",
+    "away_short": "A",
+    "free_includes": "FREE: pick + risk + form + goals.",
+    "pro_includes": "PRO: probabilities, EV, odds and advanced stats.",
+    "upcoming_matches": "Upcoming matches",
+    "empty_list": "No matches found.",
+    "date_filter_label": "Date filter",
+    "date_filter_tip": "Choose a date to filter (local timezone).",
+    "next7_label": "7D",
+    "next7_tooltip": "Show next 7 days",
+    "lang_current_tip": "Current language",
+    "lang_switch_tip": "Switch language"
   },
   "pt": {
     "brand": "RadarTips",
@@ -69,7 +95,33 @@
     "free_label": "FREE",
     "result_pending": "PENDENTE",
     "result_green": "GREEN",
-    "result_red": "RED"
+    "result_red": "RED",
+    "match_radar": "Radar do Jogo",
+    "match_radar_tip": "Abrir detalhes da partida",
+    "risk_tooltip": "Nível de risco do palpite (variância / chance de dar ruim).",
+    "suggestion_label": "Sugestão do Radar",
+    "suggestion_tooltip": "Palpite gratuito (sem EV/probabilidade aqui).",
+    "kickoff_tooltip": "Horário de início (no seu fuso local).",
+    "competition_radar_tip": "Ver jogos e destaques desta competição.",
+    "country_radar_tip": "Ver jogos e destaques deste país.",
+    "form_tooltip": "Últimos 5 jogos (passe o mouse em cada quadrado para detalhes).",
+    "form_tooltip_square": "Resultado do jogo",
+    "goals_tooltip": "Gols feitos/gols sofridos (últimos 5 jogos).",
+    "goals_title": "Gols (últimos 5)",
+    "home_label": "CASA",
+    "away_label": "FORA",
+    "home_short": "C",
+    "away_short": "F",
+    "free_includes": "FREE: sugestão + risco + forma + gols.",
+    "pro_includes": "PRO: probabilidades, EV, odds e estatísticas avançadas.",
+    "upcoming_matches": "Próximos jogos",
+    "empty_list": "Sem jogos encontrados.",
+    "date_filter_label": "Filtro de data",
+    "date_filter_tip": "Selecione uma data para filtrar (horários no seu fuso).",
+    "next7_label": "7D",
+    "next7_tooltip": "Mostrar os próximos 7 dias",
+    "lang_current_tip": "Idioma atual",
+    "lang_switch_tip": "Trocar idioma"
   },
   "es": {
     "brand": "RadarTips",
@@ -105,7 +157,33 @@
     "free_label": "FREE",
     "result_pending": "PENDIENTE",
     "result_green": "GREEN",
-    "result_red": "RED"
+    "result_red": "RED",
+    "match_radar": "Radar del Partido",
+    "match_radar_tip": "Abrir detalles del partido",
+    "risk_tooltip": "Nivel de riesgo del pronóstico (volatilidad / chance de pérdida).",
+    "suggestion_label": "Sugerencia del Radar",
+    "suggestion_tooltip": "Pronóstico gratuito (sin EV/probabilidad aquí).",
+    "kickoff_tooltip": "Hora de inicio (tu zona horaria).",
+    "competition_radar_tip": "Ver partidos de esta competición.",
+    "country_radar_tip": "Ver partidos de este país.",
+    "form_tooltip": "Últimos 5 partidos (pasa el mouse por cada cuadrado para detalles).",
+    "form_tooltip_square": "Resultado del partido",
+    "goals_tooltip": "Goles a favor/goles en contra (últimos 5).",
+    "goals_title": "Goles (últimos 5)",
+    "home_label": "LOCAL",
+    "away_label": "VISIT",
+    "home_short": "L",
+    "away_short": "V",
+    "free_includes": "FREE: sugerencia + riesgo + forma + goles.",
+    "pro_includes": "PRO: probabilidades, EV, cuotas y estadísticas avanzadas.",
+    "upcoming_matches": "Próximos partidos",
+    "empty_list": "No se encontraron partidos.",
+    "date_filter_label": "Filtro de fecha",
+    "date_filter_tip": "Elige una fecha para filtrar (zona horaria local).",
+    "next7_label": "7D",
+    "next7_tooltip": "Mostrar próximos 7 días",
+    "lang_current_tip": "Idioma actual",
+    "lang_switch_tip": "Cambiar idioma"
   },
   "fr": {
     "brand": "RadarTips",
@@ -141,7 +219,33 @@
     "free_label": "FREE",
     "result_pending": "EN ATTENTE",
     "result_green": "GREEN",
-    "result_red": "RED"
+    "result_red": "RED",
+    "match_radar": "Radar du Match",
+    "match_radar_tip": "Ouvrir les détails du match",
+    "risk_tooltip": "Niveau de risque du pronostic (volatilité / chance de perte).",
+    "suggestion_label": "Suggestion Radar",
+    "suggestion_tooltip": "Suggestion gratuite (sans EV/proba ici).",
+    "kickoff_tooltip": "Heure de coup d\"envoi (votre fuseau).",
+    "competition_radar_tip": "Voir les matchs de cette compétition.",
+    "country_radar_tip": "Voir les matchs de ce pays.",
+    "form_tooltip": "5 derniers matchs (survolez chaque carré pour les détails).",
+    "form_tooltip_square": "Résultat du match",
+    "goals_tooltip": "Buts pour/buts contre (5 derniers).",
+    "goals_title": "Buts (5 derniers)",
+    "home_label": "DOM.",
+    "away_label": "EXT.",
+    "home_short": "D",
+    "away_short": "E",
+    "free_includes": "FREE: suggestion + risque + forme + buts.",
+    "pro_includes": "PRO: probabilités, EV, cotes et stats avancées.",
+    "upcoming_matches": "Matchs à venir",
+    "empty_list": "Aucun match trouvé.",
+    "date_filter_label": "Filtre de date",
+    "date_filter_tip": "Choisissez une date pour filtrer (fuseau local).",
+    "next7_label": "7J",
+    "next7_tooltip": "Afficher les 7 prochains jours",
+    "lang_current_tip": "Langue actuelle",
+    "lang_switch_tip": "Changer de langue"
   },
   "de": {
     "brand": "RadarTips",
@@ -177,6 +281,32 @@
     "free_label": "FREE",
     "result_pending": "AUSSTEHEND",
     "result_green": "GREEN",
-    "result_red": "RED"
+    "result_red": "RED",
+    "match_radar": "Spiel-Radar",
+    "match_radar_tip": "Spieldetails öffnen",
+    "risk_tooltip": "Risikostufe des Tipps (Volatilität / Verlustchance).",
+    "suggestion_label": "Radar-Tipp",
+    "suggestion_tooltip": "Gratis-Tipp (ohne EV/Wahrscheinlichkeit hier).",
+    "kickoff_tooltip": "Anstoßzeit (Ihre Zeitzone).",
+    "competition_radar_tip": "Spiele dieser Liga ansehen.",
+    "country_radar_tip": "Spiele dieses Landes ansehen.",
+    "form_tooltip": "Letzte 5 Spiele (über jedes Feld hovern).",
+    "form_tooltip_square": "Spielergebnis",
+    "goals_tooltip": "Tore für/Tore gegen (letzte 5).",
+    "goals_title": "Tore (letzte 5)",
+    "home_label": "HEIM",
+    "away_label": "AUSW",
+    "home_short": "H",
+    "away_short": "A",
+    "free_includes": "FREE: Tipp + Risiko + Form + Tore.",
+    "pro_includes": "PRO: Wahrscheinlichkeiten, EV, Quoten und erweiterte Statistiken.",
+    "upcoming_matches": "Kommende Spiele",
+    "empty_list": "Keine Spiele gefunden.",
+    "date_filter_label": "Datumsfilter",
+    "date_filter_tip": "Datum wählen (lokale Zeitzone).",
+    "next7_label": "7T",
+    "next7_tooltip": "Nächste 7 Tage anzeigen",
+    "lang_current_tip": "Aktuelle Sprache",
+    "lang_switch_tip": "Sprache wechseln"
   }
 }
