--- a/i18n/strings.json
+++ b/i18n/strings.json
@@ -87,7 +87,21 @@
     "about_step1": "1) Pick a match from highlights or the calendar.",
     "about_step2": "2) Check the Radar suggestion and risk level.",
     "about_step3": "3) Open “Match Radar” for form, goals and context.",
-    "about_note": "Informational content. Not a bookmaker. 18+."
+    "about_note": "Informational content. Not a bookmaker. 18+.",
+    "theme_dark_short": "Dark",
+    "theme_light_short": "Light",
+    "theme_dark_tip": "Switch to dark theme",
+    "theme_light_tip": "Switch to light theme",
+    "word_home": "Home",
+    "word_away": "Away",
+    "word_draw": "Draw",
+    "market_desc_home_draw": "Home or Draw",
+    "market_desc_draw_away": "Draw or Away",
+    "market_desc_home_away": "Home or Away",
+    "market_under_prefix": "Under",
+    "market_over_prefix": "Over",
+    "market_dnb_fmt": "DNB {side}",
+    "word_handicap": "Handicap"
   },
   "pt": {
     "brand": "RadarTips",
@@ -164,7 +178,7 @@
     "pitch_free_pro": "FREE: sugestão + risco • PRO: probabilidade, EV, odds e estatísticas avançadas",
     "markets_label": "Exemplos de mercados:",
     "market_1x": "1X",
-    "market_under": "Under 3.5",
+    "market_under": "Menos de 3.5",
     "market_dnb": "DNB",
     "market_handicap": "Handicap",
     "market_1x_tip": "Dupla chance: casa ou empate.",
@@ -177,7 +191,21 @@
     "about_step1": "1) Escolha um jogo nos destaques ou no calendário.",
     "about_step2": "2) Veja a sugestão do Radar e o nível de risco.",
     "about_step3": "3) Clique em “Radar do Jogo” para forma, gols e contexto.",
-    "about_note": "Conteúdo informativo. Não somos casa de apostas. 18+."
+    "about_note": "Conteúdo informativo. Não somos casa de apostas. 18+.",
+    "theme_dark_short": "Dark",
+    "theme_light_short": "Claro",
+    "theme_dark_tip": "Ativar tema escuro",
+    "theme_light_tip": "Ativar tema claro",
+    "word_home": "Casa",
+    "word_away": "Fora",
+    "word_draw": "Empate",
+    "market_desc_home_draw": "Casa ou Empate",
+    "market_desc_draw_away": "Empate ou Fora",
+    "market_desc_home_away": "Casa ou Fora",
+    "market_under_prefix": "Menos de",
+    "market_over_prefix": "Mais de",
+    "market_dnb_fmt": "DNB {side}",
+    "word_handicap": "Handicap"
   },
   "es": {
     "brand": "RadarTips",
@@ -254,7 +282,7 @@
     "pitch_free_pro": "FREE: sugerencia + riesgo • PRO: probabilidad, EV, cuotas y estadísticas avanzadas",
     "markets_label": "Ejemplos de mercados:",
     "market_1x": "1X",
-    "market_under": "Under 3.5",
+    "market_under": "Menos de 3.5",
     "market_dnb": "DNB",
     "market_handicap": "Hándicap",
     "market_1x_tip": "Doble oportunidad: local o empate.",
@@ -267,7 +295,21 @@
     "about_step1": "1) Elige un partido en los destacados o el calendario.",
     "about_step2": "2) Revisa la sugerencia del Radar y el nivel de riesgo.",
     "about_step3": "3) Abre el “Radar del Partido” para forma, goles y contexto.",
-    "about_note": "Contenido informativo. No somos casa de apuestas. 18+."
+    "about_note": "Contenido informativo. No somos casa de apuestas. 18+.",
+    "theme_dark_short": "Oscuro",
+    "theme_light_short": "Claro",
+    "theme_dark_tip": "Activar tema oscuro",
+    "theme_light_tip": "Activar tema claro",
+    "word_home": "Local",
+    "word_away": "Visitante",
+    "word_draw": "Empate",
+    "market_desc_home_draw": "Local o Empate",
+    "market_desc_draw_away": "Empate o Visitante",
+    "market_desc_home_away": "Local o Visitante",
+    "market_under_prefix": "Menos de",
+    "market_over_prefix": "Más de",
+    "market_dnb_fmt": "DNB {side}",
+    "word_handicap": "Hándicap"
   },
   "fr": {
     "brand": "RadarTips",
@@ -344,7 +386,7 @@
     "pitch_free_pro": "FREE : suggestion + risque • PRO : probabilité, EV, cotes et stats avancées",
     "markets_label": "Exemples de marchés :",
     "market_1x": "1X",
-    "market_under": "Under 3.5",
+    "market_under": "Moins de 3.5",
     "market_dnb": "DNB",
     "market_handicap": "Handicap",
     "market_1x_tip": "Double chance : domicile ou nul.",
@@ -357,7 +399,21 @@
     "about_step1": "1) Choisissez un match (top) ou dans le calendrier.",
     "about_step2": "2) Consultez la suggestion et le niveau de risque.",
     "about_step3": "3) Ouvrez le “Radar du match” pour forme, buts et contexte.",
-    "about_note": "Contenu informatif. Pas un bookmaker. 18+."
+    "about_note": "Contenu informatif. Pas un bookmaker. 18+.",
+    "theme_dark_short": "Sombre",
+    "theme_light_short": "Clair",
+    "theme_dark_tip": "Activer le thème sombre",
+    "theme_light_tip": "Activer le thème clair",
+    "word_home": "Domicile",
+    "word_away": "Extérieur",
+    "word_draw": "Nul",
+    "market_desc_home_draw": "Domicile ou Nul",
+    "market_desc_draw_away": "Nul ou Extérieur",
+    "market_desc_home_away": "Domicile ou Extérieur",
+    "market_under_prefix": "Moins de",
+    "market_over_prefix": "Plus de",
+    "market_dnb_fmt": "DNB {side}",
+    "word_handicap": "Handicap"
   },
   "de": {
     "brand": "RadarTips",
@@ -434,7 +490,7 @@
     "pitch_free_pro": "FREE: Vorschlag + Risiko • PRO: Wahrscheinlichkeit, EV, Quoten und erweiterte Statistiken",
     "markets_label": "Markt-Beispiele:",
     "market_1x": "1X",
-    "market_under": "Under 3.5",
+    "market_under": "Unter 3.5",
     "market_dnb": "DNB",
     "market_handicap": "Handicap",
     "market_1x_tip": "Doppelte Chance: Heim oder Unentschieden.",
@@ -447,6 +503,20 @@
     "about_step1": "1) Wähle ein Spiel aus den Highlights oder dem Kalender.",
     "about_step2": "2) Prüfe Vorschlag und Risiko.",
     "about_step3": "3) Öffne den Match-Radar für Form, Tore und Kontext.",
-    "about_note": "Informationsinhalt. Kein Buchmacher. 18+."
+    "about_note": "Informationsinhalt. Kein Buchmacher. 18+.",
+    "theme_dark_short": "Dunkel",
+    "theme_light_short": "Hell",
+    "theme_dark_tip": "Dunkles Design aktivieren",
+    "theme_light_tip": "Helles Design aktivieren",
+    "word_home": "Heim",
+    "word_away": "Auswärts",
+    "word_draw": "Unentschieden",
+    "market_desc_home_draw": "Heim oder Unentschieden",
+    "market_desc_draw_away": "Unentschieden oder Auswärts",
+    "market_desc_home_away": "Heim oder Auswärts",
+    "market_under_prefix": "Unter",
+    "market_over_prefix": "Über",
+    "market_dnb_fmt": "DNB {side}",
+    "word_handicap": "Handicap"
   }
 }
