Adaptação do site ao afiliado

--- a/i18n/strings.json
+++ b/i18n/strings.json
@@ -2,6 +2,16 @@
   "en": {
     "brand": "RadarTips",
     "disclaimer": "Informational content • We are not a bookmaker • 18+",
+    "legal_note": "Informational content only. No guarantee of results. 18+ and play responsibly.\nAffiliate disclosure: we may earn commission from partner links at no extra cost.",
+    "footer_about": "About",
+    "footer_contact": "Contact",
+    "footer_terms": "Terms",
+    "footer_privacy": "Privacy",
+    "footer_affiliates": "Affiliate disclosure",
+    "footer_responsible": "Responsible gambling",
+    "footer_note": "We are not a bookmaker. Content is educational and informational.",
+    "footer_aff_note": "Some links are affiliate links. We may earn a commission at no extra cost to you.",
+    "footer_18": "18+",
     "nav_day": "Daily Radar",
     "nav_week": "Weekly Radar",
     "nav_calendar": "Calendar",
@@ -106,6 +116,16 @@
   "pt": {
     "brand": "RadarTips",
     "disclaimer": "Conteúdo informativo • Não somos casa de apostas • 18+",
+    "legal_note": "Conteúdo informativo. Sem garantia de resultados. 18+ e jogue com responsabilidade.\nDivulgação: podemos receber comissão por links de parceiros, sem custo adicional para você.",
+    "footer_about": "Sobre",
+    "footer_contact": "Contato",
+    "footer_terms": "Termos",
+    "footer_privacy": "Privacidade",
+    "footer_affiliates": "Divulgação de afiliados",
+    "footer_responsible": "Jogo responsável",
+    "footer_note": "Não somos casa de apostas. Conteúdo educacional e informativo.",
+    "footer_aff_note": "Alguns links são de afiliados. Podemos receber comissão sem custo adicional para você.",
+    "footer_18": "18+",
     "nav_day": "Radar do Dia",
     "nav_week": "Radar da Semana",
     "nav_calendar": "Calendário",
@@ -210,6 +230,16 @@
   "es": {
     "brand": "RadarTips",
     "disclaimer": "Contenido informativo • No somos casa de apuestas • 18+",
+    "legal_note": "Contenido informativo. Sin garantía de resultados. 18+ y juega con responsabilidad.\nDivulgación: podemos recibir comisión por enlaces de socios, sin costo adicional para ti.",
+    "footer_about": "Acerca de",
+    "footer_contact": "Contacto",
+    "footer_terms": "Términos",
+    "footer_privacy": "Privacidad",
+    "footer_affiliates": "Divulgación de afiliados",
+    "footer_responsible": "Juego responsable",
+    "footer_note": "No somos casa de apuestas. Contenido educativo e informativo.",
+    "footer_aff_note": "Algunos enlaces son de afiliados. Podemos recibir una comisión sin costo adicional para ti.",
+    "footer_18": "18+",
     "nav_day": "Radar del Día",
     "nav_week": "Radar de la Semana",
     "nav_calendar": "Calendario",
@@ -314,6 +344,16 @@
   "fr": {
     "brand": "RadarTips",
     "disclaimer": "Contenu informatif • Nous ne sommes pas un bookmaker • 18+",
+    "legal_note": "Contenu informatif. Aucune garantie de résultats. 18+ et jouez de manière responsable.\nDivulgation : nous pouvons percevoir une commission via des liens partenaires, sans coût supplémentaire pour vous.",
+    "footer_about": "À propos",
+    "footer_contact": "Contact",
+    "footer_terms": "Conditions",
+    "footer_privacy": "Confidentialité",
+    "footer_affiliates": "Divulgation d'affiliation",
+    "footer_responsible": "Jeu responsable",
+    "footer_note": "Nous ne sommes pas un bookmaker. Contenu éducatif et informatif.",
+    "footer_aff_note": "Certains liens sont affiliés. Nous pouvons percevoir une commission sans coût supplémentaire pour vous.",
+    "footer_18": "18+",
     "nav_day": "Radar du Jour",
     "nav_week": "Radar de la Semaine",
     "nav_calendar": "Calendrier",
@@ -418,6 +458,16 @@
   "de": {
     "brand": "RadarTips",
     "disclaimer": "Informationsinhalt • Kein Wettanbieter • 18+",
+    "legal_note": "Nur informative Inhalte. Keine Garantie für Ergebnisse. 18+ und verantwortungsvoll spielen.\nOffenlegung: Wir können über Partnerlinks eine Provision erhalten, ohne zusätzliche Kosten für dich.",
+    "footer_about": "Über",
+    "footer_contact": "Kontakt",
+    "footer_terms": "AGB",
+    "footer_privacy": "Datenschutz",
+    "footer_affiliates": "Affiliate-Hinweis",
+    "footer_responsible": "Verantwortungsvolles Spiel",
+    "footer_note": "Kein Wettanbieter. Bildungs- und Informationsinhalt.",
+    "footer_aff_note": "Einige Links sind Affiliate-Links. Wir können eine Provision erhalten, ohne zusätzliche Kosten für dich.",
+    "footer_18": "18+",
     "nav_day": "Tagesradar",
     "nav_week": "Wochenradar",
     "nav_calendar": "Kalender",
